deploy/kubernetes/manifests/kwirth.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kwirth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kwirth
  namespace: kwirth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kwirth
  revisionHistoryLimit: 0
  template:
    metadata:
      name: kwirth
      labels:
        app: kwirth
    spec:
      serviceAccount: kwirth-sa
      terminationGracePeriodSeconds: 5
      containers:
        - name: kwirth
          image: kwirthmagnify/kwirth:latest
          #imagePullPolicy: Never
          ports:
            - name: kwirth
              containerPort: 3883
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 2Gi
            requests:
              cpu: 0m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3883
            initialDelaySeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: 3883
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3883
            timeoutSeconds: 30
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: kwirth-svc
  namespace: kwirth
spec:
  selector:
    app: kwirth
  ports:
    - name: kwirth-port
      protocol: TCP
      port: 3883
      targetPort: 3883
  type: ClusterIP
